# NewFastApi

./: .env  .gitignore  Docker-compose.yaml  Dockerfile  README.md  celery_worker.py  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 053e4a814e32_create_tables.py  1cced09cc72d_create_tables.py  38cf746f39d8_create_tables.py  3e220885b4b6_create_tables.py  3e65f4beb8c5_add_avatar_url_to_users_table.py  829fa5ab9f87_add_confirmed.py  8c1ccb8fc86a_create_tables.py  9650857e6e5d_add_avatar_url_to_users_table.py  f110863e0302_create_table_contacts.py
src/: schemas.py  settings.py
src/database/: database.py  models.py
src/repository/: auth.py  contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/templates/: email_template.html  test_cors.html
src/utils/: cloudinary.py
tests/: conftest.py  test_pytest_routes_contacts.py  test_pytest_routes_users.py  test_unit_repository_contacts.py
