[tool.poetry]
name = "newfastapi"
version = "0.1.0"
description = ""
authors = ["YaroslavPich <pich.yaroslav@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.4"
psycopg2-binary = "^2.9.9"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
